test/types/cptr/const/c_ptrConst_modify.good
c_ptrConst_modify.chpl:6: error: cannot assign to const variable
