test/types/cptr/const/c_ptrConst_modify.chpl
use CTypes;

var x : c_int = 5;
var xp : c_ptrConst(c_int) = c_ptrToConst(x);
writeln(xp.deref());
xp.deref() = 4;
